--- a/src/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/src/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Models\Projects\ProjectImageModel.cs" />
     <Compile Include="Models\Projects\ProjectModel.cs" />
     <Compile Include="Models\Projects\ProjectModelViewModel.cs" />
+    <Compile Include="Models\Projects\ProjectRelationModel.cs" />
     <Compile Include="Models\Projects\ProjectTextModel.cs" />
     <Compile Include="Models\Projects\ProjectVersionDescriptionModel.cs" />
     <Compile Include="Models\Projects\ProjectVersionModel.cs" />
@@ -220,6 +221,7 @@
     <Content Include="Content\Images\Projects\solution-runner-02.png" />
     <Content Include="Content\Images\Projects\solution-runner-03.png" />
     <Content Include="Content\Images\Projects\solution-runner-04.png" />
+    <Content Include="Content\Images\Projects\solution-runner-icon.png" />
     <Content Include="Content\Images\Projects\template-engine-01.png" />
     <Content Include="Content\Images\Projects\template-engine-02.png" />
     <Content Include="Content\Images\Projects\template-engine-03.png" />
