--- a/src/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/src/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -165,6 +165,9 @@
     <Content Include="App_Data\Blog.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="App_Data\Projects.Vsix.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="App_Data\Projects.Desktop.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -209,12 +212,15 @@
     <Content Include="Content\Images\Projects\chromium-updater-02.png" />
     <Content Include="Content\Images\Projects\chromium-updater-03.png" />
     <Content Include="Content\Images\Projects\chromium-updater-04.png" />
+    <Content Include="Content\Images\Projects\chromium-updater-icon.png" />
     <Content Include="Content\Images\Projects\is4wfw-01.png" />
     <Content Include="Content\Images\Projects\is4wfw-02.png" />
     <Content Include="Content\Images\Projects\is4wfw-03.png" />
+    <Content Include="Content\Images\Projects\line-duplication-01.gif" />
     <Content Include="Content\Images\Projects\link-extractor-01.png" />
     <Content Include="Content\Images\Projects\link-extractor-02.png" />
     <Content Include="Content\Images\Projects\link-extractor-03.png" />
+    <Content Include="Content\Images\Projects\money-icon.png" />
     <Content Include="Content\Images\Projects\nuget-icon.png" />
     <Content Include="Content\Images\Projects\productivity-01.png" />
     <Content Include="Content\Images\Projects\productivity-02.png" />
@@ -228,13 +234,16 @@
     <Content Include="Content\Images\Projects\template-engine-03.png" />
     <Content Include="Content\Images\Projects\template-engine-04.png" />
     <Content Include="Content\Images\Projects\template-engine-05.png" />
+    <Content Include="Content\Images\Projects\template-engine-icon.png" />
     <Content Include="Content\Images\Projects\uwp-icon.png" />
     <Content Include="Content\Images\Projects\vocabulary-app-01.png" />
     <Content Include="Content\Images\Projects\vocabulary-app-02.png" />
     <Content Include="Content\Images\Projects\vocabulary-app-03.png" />
     <Content Include="Content\Images\Projects\vocabulary-app-04.png" />
     <Content Include="Content\Images\Projects\vocabulary-app-05.png" />
+    <Content Include="Content\Images\Projects\vocabulary-app-icon.png" />
     <Content Include="Content\Images\Projects\vsix-icon.png" />
+    <Content Include="Content\Images\Projects\webcamimagecollector-icon.png" />
     <Content Include="Content\Images\Projects\windows-dock-01.jpg" />
     <Content Include="Content\Images\Projects\windows-dock-02.png" />
     <Content Include="Content\Images\Projects\windows-dock-03.png" />
