--- a/src/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/src/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -213,6 +213,7 @@
     <Content Include="Content\Images\Projects\chromium-updater-03.png" />
     <Content Include="Content\Images\Projects\chromium-updater-04.png" />
     <Content Include="Content\Images\Projects\chromium-updater-icon.png" />
+    <Content Include="Content\Images\Projects\go-to-source-01.gif" />
     <Content Include="Content\Images\Projects\is4wfw-01.png" />
     <Content Include="Content\Images\Projects\is4wfw-02.png" />
     <Content Include="Content\Images\Projects\is4wfw-03.png" />
