Add blog post about Blazor boot screen. Update blog post URL for this 2018, so month is in D2 and day is of.

--- a/src/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/src/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Models\Webs\WebModel.cs" />
     <Compile Include="Models\Webs\WebDataService.cs" />
     <Compile Include="Navigation\BlogAtomRoute.cs" />
+    <Compile Include="Navigation\BlogPostRouteNG.cs" />
     <Compile Include="Navigation\BlogRoute.cs" />
     <Compile Include="Navigation\BlogPostRoute.cs" />
     <Compile Include="Navigation\HomeCzechRoute.cs" />
