Include blog items in project file.

--- a/src/Neptuo.WebSite/Neptuo.WebSite.csproj
+++ b/src/Neptuo.WebSite/Neptuo.WebSite.csproj
@@ -193,6 +193,13 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\featherlight.min.css" />
     <Content Include="Content\Images\BackgroundSingle.png" />
+    <Content Include="Content\Images\Blog\appveyor-vsix-feed\vs-feed-settings.png" />
+    <Content Include="Content\Images\Blog\blazor-boot-screen\basic.png" />
+    <Content Include="Content\Images\Blog\blazor-boot-screen\money-loaded.png" />
+    <Content Include="Content\Images\Blog\blazor-boot-screen\money.png" />
+    <Content Include="Content\Images\Blog\blazor-component-parameters\confirm.png" />
+    <Content Include="Content\Images\Blog\blazor-page-parameters\tabs-done.png" />
+    <Content Include="Content\Images\Blog\blazor-page-parameters\tabs.png" />
     <Content Include="Content\Images\Blog\mvc-route-values\blog-post-preview.png" />
     <Content Include="Content\Images\Blog\productivity-solution-runner\additional-applications.png" />
     <Content Include="Content\Images\Blog\productivity-solution-runner\main-window.png" />
@@ -200,6 +207,8 @@
     <Content Include="Content\Images\Blog\why-i-hate-hamburgers\middle.png" />
     <Content Include="Content\Images\Blog\why-i-hate-hamburgers\mobile.png" />
     <Content Include="Content\Images\Blog\why-i-hate-hamburgers\youtube.png" />
+    <Content Include="Content\Images\Blog\wpf-design-data\enable-project-code.png" />
+    <Content Include="Content\Images\Blog\wpf-preventing-alt-f4\winrun-clock.png" />
     <Content Include="Content\Images\Logo-170.png" />
     <Content Include="Content\Images\Logo-220.png" />
     <Content Include="App_Data\Blog\why-i-hate-hamburgers.md" />
@@ -212,6 +221,9 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="App_Data\Blog\appveyor-vsix-feed.md" />
+    <Content Include="App_Data\Blog\wpf-design-data.md" />
+    <Content Include="App_Data\Blog\wpf-preventing-alt-f4.md" />
     <None Include="Content\Stylesheet\blog.responsiveness.scss" />
     <None Include="Content\Stylesheet\common.scss" />
     <None Include="Content\Stylesheet\blog.scss" />
