--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,9 +20,8 @@ on_success:
   - git config --global credential.helper store
   - git config --global user.email appveyor@neptuo.com
   - git config --global user.name Appveyor
-  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
   - git config --global core.autocrlf true
-  - git remote set-url origin https://github.com/neptuo/com.neptuo.git
+  - git remote set-url origin https://$($env:access_token)@github.com/neptuo/com.neptuo.git
   - git checkout gh-pages
   - git clean -f
   - git rm -rf .
